data/derived/comb/progs/unify/prog0578.ml.out
Characters 423-485:
  | 5 -> buildAverage(first_forced, build(rand, depth - 1), build(rand, depth - 1));;
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type expr * expr
